--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -2,53 +2,75 @@
 {% block mycontent %}
 {% load filters %}
 
-    <div>
-
-        <div>
-            <p>
-                Zapsaný spolek Charlie nabízí studentkám a studentům a akademickým pracovnicím a pracovníkům
-                Univerzity Karlovy a jiných vysokých škol, stejně jako jejich přátelům a příznivcům,
-                platformu pro seberealizaci, setkávání, zábavu a řešení společných problémů.
-            </p>
-            <p>
-                Zaměřuje se především na gay, lesbické, bisexuální, asexuální a transgender jedince a jejich
-                právo nebýt diskriminován na základě citové a sexuální orientace/identifikace.
-            </p>
-            <p>
-                Posláním sdružení Charlie je zkvalitňování života nejen této skupiny, ale celé akademické obce a
-                společnosti, prostřednictvím vzájemného respektu a přijmutím rozmanitosti.
-            </p>
+  <section id="next" class="py-3 bg-dark text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+<!--          <h2><a href="index.php" title="Zpátky"> <i class="fa fa-arrow-left"></i></a> Kdo je Charlie?</h2>-->
+          <h2>Kdo je Charlie?</h2>
         </div>
-
-        <div>
-            <p>
-                Cílem sdružení Charlie je poskytnutí důstojného zázemí pro minoritu, díky kterému bude moci
-                spolupracovat s majoritou a nebude se před ní uzavírat a vyčleňovat. Proto je členství ve spolku
-                otevřené pro heterosexuály, sympatizanty, absolventy a další zájemce, kteří vnímají problém
-                nerovných příležitostí jako společensky závažný jev.
-            </p>
-        </div>
-
-        <div>
-            <p>
-                Spolek tvoří několik desítek členů, kteří se starají o rozmanité aktivity vedené v souladu
-                s jeho posláním. Nejdůležitější projekty směřují ke studujícím, jejichž pocit sounáležitosti
-                s okolím, bezpečnosti a sebevědomí je hlavním zájmem spolku.
-            </p>
-            <p>
-                Zároveň sdružení dbá na pozitivní prezentaci Univerzity Karlovy jako akademické instituce,
-                jež si je vědoma diverzity a z ní vyplývajících výhod, ale i potenciálních konfliktů. Jejich
-                prevencí se spolek Charlie systematicky zabývá. V programu sdružení jsou proto přednášky,
-                diskuze, filmové projekce, výstavy, pikniky, výlety, soutěže a další kulturní a společenské akce.
-            </p>
-            <p>
-                Navazujeme také spolupráci s podobnými organizacemi při zahraničních univerzitách a v rámci
-                České republiky. Důležitá jsou i pravidelná úterní setkání sloužící k socializaci a vytváření
-                nových přátel, která jsou určena pro stávající členy i pro nově příchozí zájemce.
-            </p>
-        </div>
-
+      </div>
     </div>
+  </section>
 
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="lead">
+            Zapsaný spolek Charlie nabízí studentkám a studentům a akademickým pracovnicím a pracovníkům
+            Univerzity Karlovy a jiných vysokých škol, stejně jako jejich přátelům a příznivcům,
+            <b>platformu pro seberealizaci, setkávání, zábavu a řešení společných problémů.</b>
+            <br/>
+            Zaměřuje se především na <b>gay, lesbické, bisexuální, asexuální a transgender jedince</b>
+            a jejich právo nebýt diskriminován na základě citové a sexuální orientace/identifikace.
+            <br/>Posláním sdružení Charlie je zkvalitňování života nejen této skupiny, ale celé akademické obce
+            a společnosti, prostřednictvím <b>vzájemného respektu a přijmutím rozmanitosti</b>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="more" class="bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="lead">
+            Cílem sdružení Charlie je poskytnutí důstojného <b>zázemí pro minoritu</b>, díky kterému bude moci
+            <b>spolupracovat s majoritou</b> a nebude se před ní uzavírat a vyčleňovat. Proto je členství ve spolku
+            otevřené pro heterosexuály, sympatizanty, absolventy a další zájemce, kteří vnímají problém nerovných
+            příležitostí jako společensky závažný jev.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="lead">
+            Spolek tvoří několik desítek členů, kteří se starají o rozmanité aktivity vedené v souladu s jeho posláním.
+            Nejdůležitější projekty směřují ke studujícím, jejichž
+            <b>pocit sounáležitosti s okolím, bezpečnosti a sebevědomí</b>
+            je hlavním zájmem spolku.
+          </p>
+          <p class="lead">
+            Zároveň sdružení dbá na pozitivní prezentaci Univerzity Karlovy jako akademické instituce, jež si je vědoma
+            diverzity a z ní vyplývajících výhod, ale i potenciálních konfliktů.
+            Jejich prevencí se spolek Charlie systematicky zabývá. V programu sdružení jsou proto <b>přednášky, diskuze,
+            filmové projekce, výstavy, pikniky, výlety, soutěže</b> a další kulturní a společenské akce.
+          </p>
+          <p class="lead">
+            Navazujeme také spolupráci s podobnými organizacemi při zahraničních univerzitách a v rámci České republiky.
+            Důležitá jsou i <b>pravidelná úterní setkání</b> sloužící k socializaci a vytváření nových přátel,
+            která jsou určena pro stávající členy i pro nově příchozí zájemce.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 {% endblock %}
