--- a/website/templates/partners.html
+++ b/website/templates/partners.html
@@ -22,7 +22,7 @@
                             </div>
                             <div class="slide">
                                 <a target="_blank" href="https://praguepride.cz">
-                                    <img src="{% static 'praguepride.PNG' %}" alt="Prague PRIDE">
+                                    <img src="{% static 'praguepride.png' %}" alt="Prague PRIDE">
                                     <span>Prague PRIDE</span>
                                 </a>
                             </div>
@@ -58,7 +58,7 @@
                             </div>
                             <div class="slide">
                                 <a target="_blank" href="https://www.iglyo.com">
-                                    <img src="{% static 'iglyo.PNG' %}" alt="IGLYO">
+                                    <img src="{% static 'iglyo.png' %}" alt="IGLYO">
                                     <span>IGLYO</span>
                                 </a>
                             </div>
