feat(translation): add second app for english

--- a/website_en/templates/navbar_en.html
+++ b/website_en/templates/navbar_en.html
@@ -10,22 +10,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">O nás</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a>
+                    <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#joinus">Přidejte se k nám</a>
+                    <a class="nav-link js-scroll-trigger" href="#joinus">Join us</a>
                 </li>
                 <!--<li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#events">Události</a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'magazine' %}" target="_blank">Časopis</a>
+                    <a class="nav-link" href="{% url 'magazine' %}" target="_blank">Magazine</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home_en' %}">English</a>
+                    <a class="nav-link" href="{% url 'home' %}">Čeština</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.facebook.com/spolekcharlie" target="_blank">
@@ -46,7 +46,7 @@
 
 <header class="text-white" id="charlie-header">
     <div class="container text-center">
-        <a href="/"><img src="{% static 'logo.PNG' %}" style="width:400px;"></a>
+        <a href="/en"><img src="{% static 'logo.PNG' %}" style="width:400px;"></a>
     </div>
 </header>
 
