--- a/website_en/templates/about_en.html
+++ b/website_en/templates/about_en.html
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Kdo je Charlie?</h2>
+          <h2>What is Charlie?</h2>
         </div>
       </div>
     </div>
