feat(base): add facebook script

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -44,6 +44,19 @@
         <!-- Plugin JavaScript -->
         <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+        
+        <!-- Plugin Facebook -->
+        <script>
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId            : 'your-app-id',
+              autoLogAppEvents : true,
+              xfbml            : true,
+              version          : 'v14.0'
+            });
+          };
+        </script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
         {% load static %}
         <script src="{% static 'script.js' %}"></script>
