--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -57,6 +57,9 @@
           };
         </script>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+        
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0" nonce="VRJ0OSWW"></script>
 
         {% load static %}
         <script src="{% static 'script.js' %}"></script>
