feat(gallery): Add photo gallery subpage

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -66,6 +66,33 @@
         </div>
     </section>
 
+<!--    <section id="gallery">-->
+<!--        <div class="container slick-container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-9 mx-auto">-->
+<!--                    <h2>Fotogalerie</h2>-->
+<!--                    <br>-->
+<!--                    <div class="row">-->
+<!--                        fotogalerie-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+
+<!--    <section id="mazagine" class="bg-light">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-9 mx-auto">-->
+<!--                    <h2>casopis</h2>-->
+<!--                    <p class="lead">-->
+<!--                        casopis-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+
     {% include 'partners.html' %}
 
 {% endblock %}
