--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -22,6 +22,9 @@
                   <a class="nav-link js-scroll-trigger" href="#events">Události</a>
                 </li>-->
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'gallery' %}">Fotogalerie</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'magazine' %}" target="_blank">Časopis</a>
                 </li>
                 <li class="nav-item">
