--- a/website_en/templates/about_en.html
+++ b/website_en/templates/about_en.html
@@ -17,14 +17,15 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead">
-            Zapsaný spolek Charlie nabízí studentkám a studentům a akademickým pracovnicím a pracovníkům
-            Univerzity Karlovy a jiných vysokých škol, stejně jako jejich přátelům a příznivcům,
-            <b>platformu pro seberealizaci, setkávání, zábavu a řešení společných problémů.</b>
+            The registered Charlie association offers students and employees of Charles University and other 
+            universities, as well as their friends and allies, <b> a platform for self-realisation, 
+            socialization, entertainment and for finding support in difficult life situations.</b>
             <br/>
-            Zaměřuje se především na <b>gay, lesbické, bisexuální, asexuální a transgender jedince</b>
-            a jejich právo nebýt diskriminován na základě citové a sexuální orientace/identifikace.
-            <br/>Posláním sdružení Charlie je zkvalitňování života nejen této skupiny, ale celé akademické obce
-            a společnosti, prostřednictvím <b>vzájemného respektu a přijmutím rozmanitosti</b>.
+            It focuses primarily on <b>gay, lesbian, bisexual, asexual and transgender people</b> and their 
+            right not to be discriminated against based on their sexual and/or gender identity.
+            <br/>Charlie association's mission is to improve not only queer people´s quality of life, 
+            but also the entire academic community and society by the means of perpetuating <b>mutual respect 
+            and acceptance of diversity</b>.
           </p>
         </div>
       </div>
@@ -36,10 +37,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead">
-            Cílem sdružení Charlie je poskytnutí důstojného <b>zázemí pro minoritu</b>, díky kterému bude moci
-            <b>spolupracovat s majoritou</b> a nebude se před ní uzavírat a vyčleňovat. Proto je členství ve spolku
-            otevřené pro heterosexuály, sympatizanty, absolventy a další zájemce, kteří vnímají problém nerovných
-            příležitostí jako společensky závažný jev.
+            Charlie´s goal is to provide a <b>dignified safe heaven for minorities</b>, thanks to which we´ll 
+            be able to <b>cooperate with the majority</b> instead of isolating ourselves. Thats why membership 
+            is open to heterosexuals, allies, absolvents and other interested parties that perceive the problem 
+            of unequal opportunities as a serious social issue.
           </p>
         </div>
       </div>
@@ -51,21 +52,20 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead">
-            Spolek tvoří několik desítek členů, kteří se starají o rozmanité aktivity vedené v souladu s jeho posláním.
-            Nejdůležitější projekty směřují ke studujícím, jejichž
-            <b>pocit sounáležitosti s okolím, bezpečnosti a sebevědomí</b>
-            je hlavním zájmem spolku.
+            The association consists of several dozen members who partake in a diverse range of activities with 
+            consideration to Charlie's mission. The most important projects are directed towards students. One of 
           </p>
           <p class="lead">
-            Zároveň sdružení dbá na pozitivní prezentaci Univerzity Karlovy jako akademické instituce, jež si je vědoma
-            diverzity a z ní vyplývajících výhod, ale i potenciálních konfliktů.
-            Jejich prevencí se spolek Charlie systematicky zabývá. V programu sdružení jsou proto <b>přednášky, diskuze,
-            filmové projekce, výstavy, pikniky, výlety, soutěže</b> a další kulturní a společenské akce.
+            At the same time, the association honours a positive presentation of Charles University as an academic 
+            institution which is aware of both advantages and potencial conflicts created by embracing diversity.
+            Charlie systematically deals with conflict prevention. For this reason Charlie´s events include <b>lectures, 
+            discussions, movie projections, exhibitions, picnics, trips, competitions</b> and other cultural and social 
+            events.
           </p>
           <p class="lead">
-            Navazujeme také spolupráci s podobnými organizacemi při zahraničních univerzitách a v rámci České republiky.
-            Důležitá jsou i <b>pravidelná úterní setkání</b> sloužící k socializaci a vytváření nových přátel,
-            která jsou určena pro stávající členy i pro nově příchozí zájemce.
+            We also cooperate with other queer organisations, both foreign and those in the Czech Republic. 
+            Our most important events are our <b>regular Tuesday meetings</b>, designed for socialisation and making 
+            new friends in and outside the queer world. They are open to both members and newcommers alike.
           </p>
         </div>
       </div>
