--- a/website_en/templates/board_en.html
+++ b/website_en/templates/board_en.html
@@ -26,7 +26,7 @@
                 <hr class="rainbow">
                 <p class="lead" style="font-size: 1.1rem;">
                     {% with medallion=member.medallion_en|safe %}
-                        {{ medallion|default_if_none:"bla" }}
+                        {{ medallion|default_if_none:"" }}
                     {% endwith %}
                 </p>
                 <hr class="rainbow">
@@ -46,9 +46,9 @@
         <div class="row">
             <div class="col-lg-9 mx-auto">
                 <p class="lead">
-                    V případě potřeby se na nás neváhejte obrátit a to i v případě pokud byste rádi přišli,
-                    ale nechce se vám samotným.
-                    Rádi se s vámi některý z členů sejde před událostí a uvede vás.
+                    Do not hesitate to contact us, even in case you would like to come to one of our events and do not feel 
+                    comfortable coming alone. One of our board members will gladly meet you in advance and introduce you to 
+                    everyone.
                 </p>
                 <h2>Výbor</h2>
                 <div class="row">
