--- a/website_en/templates/events_en.html
+++ b/website_en/templates/events_en.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="event card my-3 shadow shadow-hover pointer">
-                            <div class="card-body lead text-center">Úterní setkání</div>
+                            <div class="card-body lead text-center">Tuesday Meeting</div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
@@ -21,7 +21,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="event card my-3 shadow shadow-hover">
                             <div class="card-body lead text-center">
-                                Filmový klub
+                                Movie Club
                             </div>
                         </div>
                     </div>
