--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -2,7 +2,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Charlie, z.s. <?=date('Y')?></p>
+        <p class="m-0 text-center text-white">Copyright &copy; Charlie, z.s. 2022</p>
         <p class="m-0 text-center text-white">Ovocný Trh 560/5, 110 00 Praha 1<br/>IČ: 22812571</p>
     </div>
 </footer>
