--- a/website_en/templates/home_en.html
+++ b/website_en/templates/home_en.html
@@ -8,14 +8,14 @@
             <div class="row">
                 <div class="col-lg-9 mx-auto">
                     <p class="lead">
-                        Vítejte na stránkách Charlie, queer spolku Univerzity Karlovy.
-                        Jsme studentským spolkem s cílem vytváření komunitního prostoru pro LGBTQIA+ prostřednictvím
-                        pořádání veřejných akcí rozmanitého typu nejen na akademické půdě.
-                        Přijďte na některou z nich a poznejte nás blíže.
+                        Welcome to the official website of Charlie, queer association of Charles University.
+                        We are a student association with the goal of creating a community space for LGBTQIA+ 
+                        people by organising various public events, both on and off campus grounds.
+                        Come to one of our events and meet us closer.
                     </p>
                     <div class="text-center">
                         <a href="{% url 'about_en' %}" class="btn btn-light btn-sm btn-more px-4 py-0 rounded-lg">
-                            <small class="text-muted">Čti víc</small>
+                            <small class="text-muted">Read more</small>
                             <i class="fa fa-ellipsis-h fa-3x text-muted"></i>
                         </a>
                     </div>
@@ -33,10 +33,12 @@
                 <div class="col-lg-9 mx-auto">
                     <h2>Přidejte se k nám</h2>
                     <p class="lead">
-                        Naše akce jsou otevřené pro všechny, uvítáme mezi sebe každého z Vás.
-                        Podpořit nás můžete členstvím v roční nebo doživotní formě.
-                        Členství přináší výhody jako například slevy v některých podnicích.
-                        Pokud se k nám chcete přidat, stačí vyplnit žádost níže nebo přijít na jakýkoliv event.
+                        Our events are open to all, everyone´s welcome amongst us.
+                        You can support us by either purchasing a lifetime membership or a year long membership.
+                        Being a member of Charlie brings you benefits such as discounts in certain establishments 
+                        or the possibility to attend one of our unofficial events.
+                        If you would like to join us, you can fill out an application online or come to any of 
+                        our events.
                     </p>
                     <div class="row">
                         <div class="col-md-auto col-sm-12 my-auto">
@@ -50,12 +52,12 @@
                         </div>
                     </div>
                     <p class="lead mt-4">
-                        Pro online vyřízení přihlášky nás můžete kontaktovat na
+                        For online processing of you application, contact us at 
                         <a href="mailto:tajemnik@spolekcharlie.cz">tajemnik@spolekcharlie.cz</a>.
                     </p>
                     <p class="lead mt-4">
-                        Zaplatit členský poplatek nebo nám umožnit dále se rozvíjet můžete skrze transparentní účet Charlie.
-                        Za příspěvek předem děkujeme.
+                        You can pay the membership fee via Charlie´s transparent account.
+                        This will allow us to continue doing our work. Thank you in advance for your contribution.
                     </p>
                     <div class="d-flex flex-row justify-content-center align-items-center">
                         <i class="fa fa-3x fa-credit-card"></i>
