refactor(home): add todo

--- a/website_en/templates/home_en.html
+++ b/website_en/templates/home_en.html
@@ -47,6 +47,7 @@
                                 <a href="{% url 'view_file' file.slug %}" target="_blank"
                                    class="btn btn-outline-primary mr-1">{{ file.name }}
                                 </a>
+                                <!-- TODO: add english filename -->
                             {% endfor %}
 
                         </div>
