feat(file model): add english name field

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link js-scroll-trigger" href="#joinus">Přidejte se k nám</a>
                 </li>
                 <!--<li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#events">Události</a>
+                  <a class="nav-link js-scroll-trigger" href="/#events">Události</a>
                 </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'gallery' %}">Fotogalerie</a>
