--- a/website_en/templates/navbar_en.html
+++ b/website_en/templates/navbar_en.html
@@ -19,8 +19,11 @@
                     <a class="nav-link js-scroll-trigger" href="#joinus">Join us</a>
                 </li>
                 <!--<li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#events">Události</a>
+                  <a class="nav-link js-scroll-trigger" href="/#events">Events</a>
                 </li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'gallery_en' %}">Gallery</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'magazine' %}" target="_blank">Magazine</a>
                 </li>
