--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">O nás</a>
+                    <a class="nav-link js-scroll-trigger" href="/#about">O nás</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Kontakt</a>
+                    <a class="nav-link js-scroll-trigger" href="/#contact">Kontakt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#joinus">Přidejte se k nám</a>
+                    <a class="nav-link js-scroll-trigger" href="/#joinus">Přidejte se k nám</a>
                 </li>
                 <!--<li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="/#events">Události</a>
