fix(translation): add missing views and filters

--- a/website_en/templates/about_en.html
+++ b/website_en/templates/about_en.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block mycontent %}
+{% extends "base_en.html" %}
+{% block mycontent_en %}
 {% load filters %}
 
   <section id="next" class="py-3 bg-dark text-light">
