--- a/website_en/templates/gallery_en.html
+++ b/website_en/templates/gallery_en.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block mycontent %}
+{% extends "base_en.html" %}
+{% block mycontent_en %}
 {% load filters %}
 {% load static %}
 
