--- a/website_en/templates/navbar_en.html
+++ b/website_en/templates/navbar_en.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="/en/#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
+                    <a class="nav-link js-scroll-trigger" href="/en/#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#joinus">Join us</a>
+                    <a class="nav-link js-scroll-trigger" href="/en/#joinus">Join us</a>
                 </li>
                 <!--<li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="/#events">Events</a>
